        https://github.com/scummvm/scummvm/commits/

1.8.0 (????-??-??)
 New Games:
   - Added support for Rex Nebular and the Cosmic Gender Bender.
   - Added support for Sfinx.
   - Added support for Zork Nemesis: The Forbidden Lands.
   - Added support for Zork: Grand Inquisitor.

 General:
   - Updated Munt MT-32 emulation code to version 1.5.0.

 AGI:
   - It is now possible to disable mouse support (except for Amiga versions
     and fanmade games, that require a mouse).
   - Fix incorrect volume attenuation in PCjr sound code (bug #6858).

 AGOS:
   - Fixed arpeggio effect used in music of Amiga version of Elvira 1.
   - Fixed loading and saving progress in the PC version of Waxworks.
   - Added Accolade AdLib & MT32 music drivers for the games:
     Elvira 1, Elvira 2, Waxworks and Simon the sorcerer 1 demo

 Broken Sword 1:
   - Fix speech endianness detection on big endian systems for the mac
     version (bug #6720).
   - Fix crash when reloading a game from the Main Menu while in the bull's
     head scene (bug #6728). It may have been happening in other scenes as
     well.

 SCI:
   - Handling of music priority has been greatly improved.
   - A lot of fixes for original game script bugs that also occurred when
     using the original interpreter.
     KQ6 (Dual Mode), LSL5, QfG1 (EGA), QfG1 (VGA), QfG2, QfG3, SQ1, SQ4 (CD)
   - Restoring from the ScummVM in-game menu should now work all the time.
   - Improve support for Japanese PC-9801 games.

 SCUMM:
   - It is now possible to play Maniac Mansion from within Day of the
     Tentacle, with a few caveats. See README for details.

 Tinsel:
   - improved AdLib music support in Discworld 1

1.7.0 (2014-07-21)
 New Games:
   - Added support for Chivalry is Not Dead.
   - Added support for Return to Ringworld.
   - Added support for The Neverhood.
   - Added support for Mortville Manor.
   - Added support for Voyeur.

 General:
   - Updated Munt MT-32 emulation code to version 1.3.0.